ges-launch: timeoverlay errors
I noticed a few problems in ges-launch
:
ges-launch-1.0 +test-clip "blue" start=0 duration=5
will produce a constant stream of error messages from timecodestamper
0:00:06.231966197 10194 0x7fd16802e4f0 ERROR timecodestamper gsttimecodestamper.c:1012:gst_timecodestamper_query:<timecodestamper0> Need a known, non-variable framerate to answer LATENCY query
This goes away with
ges-launch-1.0 +test-clip "blue" start=0 duration=5 use-time-overlay true
but then this will hang at time 5.
Moreover, with
ges-launch-1.0 +test-clip "blue" start=0 duration=5 set-use-time-overlay true +test-clip "green" start=5 duration=5 set-volume 0.25 set-use-time-overlay true
at time 5, the video will hang (stuck on blue, but audio changes).